--- a/_posts/2018/2018-02-28-oh-my-zsh.md
+++ b/_posts/2018/2018-02-28-oh-my-zsh.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Installing Oh My Zsh on Ubuntu-based Systems"
+title:  "Installing Oh My Zsh on Debian-Based Systems"
 date: 2018-02-28 12:00:00 +0200
 categories: zsh oh-my-zsh terminal shell git
 ---
