--- a/_posts/2018/2018-02-28-oh-my-zsh.md
+++ b/_posts/2018/2018-02-28-oh-my-zsh.md
@@ -20,7 +20,7 @@ You may see a version equal or greater than 5.1.1. Next step is the installation
 
 ![Oh-my-zsh installed](/images/posts/oh-my-zsh.png)
 
-When the installation script finishes the command prompt is probably different from before. It means Oh-My-Zsh was successfully installed. If the prompt looks too minimalistic for you, don't panic. Oh-My-Zsh accepts themes and this is just the default one: robbyrussell. To change it, go to the home folder, edit the hidden file `.zshrc`, and change the variable `ZSH_THEME` to `bureau`, which is my favorite theme:
+When the installation script finishes the command prompt is probably different from before. It means Oh-My-Zsh was successfully installed. If the prompt looks too minimalistic for you, don't panic. Oh-My-Zsh accepts themes and this is just the default one: **robbyrussell**. To change it, go to the home folder, edit the hidden file `.zshrc`, and change the variable `ZSH_THEME` to **bureau**, which is my favorite theme:
 
     $ cd ~
     $ vim .zshrc
@@ -31,17 +31,17 @@ When the installation script finishes the command prompt is probably different f
 
 For a complete list of themes, checkout the [theme catalog][theme-catalog]. Make sure you have some time to spare because trying new themes is addictive.
 
-Oh-My-Zsh won't start by default. To activate it we have to type `$ zsh` every time we open a new terminal. If you are convinced that Oh-My-Zsh is your thing, we can make sure it is always available. On the terminal window, select **Edit > Profile Preferences** in the menu to open the window **Editing Profile**. Go to the tab "Title and Command", select the field **Run a custom command instead of my shell** and type `zsh` in the **Custom command** field. Restart the terminal to see it in action.
+Oh-My-Zsh won't start by default. To activate it we have to type `$ zsh` every time we open a new terminal. If you are convinced that Oh-My-Zsh is your thing, we can make sure it is always available. On the terminal window, select **Edit > Profile Preferences** in the menu. In the new window, go to the tab **Title and Command**, select the field **Run a custom command instead of my shell** and type `zsh` in the **Custom command** field. Restart the terminal to see it in action.
 
 ![Console profile config](/images/posts/oh-my-zsh-profile-config.png)
 
-What I love about Oh-My-Zsh is its integration with Git. In a single prompt, the theme **bureau** shows:
+What I love about Oh-My-Zsh is its integration with Git, the smart auto-complete, and all the information it shows in a single prompt. the theme **bureau** shows:
 
 * my location, so I don't have to time `pwd` all the time
 
 * the time, which is useful to know how long the last operation took by comparing the time of the subsequent prompt
 
-* the current branch, when I'm in a Git repository, plus the state of this branch with a rich set of colorful symbols.
+* the current branch and its state with a rich set of colorful symbols, when I'm in a Git repository.
 
 ![Console profile config](/images/posts/oh-my-zsh-bureau.png)
 
@@ -50,5 +50,3 @@ Please, comment below your questions, thoughts and which theme suits you best.
 [Oh-My-Zsh]: http://ohmyz.sh
 [theme-catalog]: https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
 [Zsh]: http://www.zsh.org
-
-LEONARDO <- My kid was on my lap when I was writing this and he asked me to use the keyboard to type his first name.
