Added excerpt separator

--- a/_posts/2018/2018-02-28-oh-my-zsh.md
+++ b/_posts/2018/2018-02-28-oh-my-zsh.md
@@ -9,6 +9,8 @@ categories: zsh oh-my-zsh terminal shell git
 
 [Zsh] (Z shell) is a tool to enhance shell's capabilities. It's indispensable for those working in Unix-based systems. To make Zsh simpler, there is [Oh-My-Zsh], which is a framework for managing the Zsh configuration with the concept of themes. The goal of this post it to get you all set with Oh-My-Zsh on your Debian Linux system.
 
+<!-- more -->
+
 To start, let's install Zsh:
 
     $ sudo apt-get install zsh
