Fixes proposed by Kenia

--- a/_posts/2018/2018-02-28-oh-my-zsh.md
+++ b/_posts/2018/2018-02-28-oh-my-zsh.md
@@ -16,7 +16,7 @@ To start, let's install Zsh:
     $ sudo apt-get install zsh
     $ zsh --version
 
-You may see a version equal or greater than 5.1.1. Next step is the installation of Oh-My-Zsh:
+You may see a version equal or greater than 5.1.1. The next step is the installation of Oh-My-Zsh:
 
     $ sh -c "$(wget https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh -O -)"
 
@@ -33,13 +33,13 @@ When the installation script finishes the command prompt is probably different f
 
 For a complete list of themes, checkout the [theme catalog][theme-catalog]. Make sure you have some time to spare because trying new themes is addictive.
 
-Oh-My-Zsh won't start by default. To activate it we have to type `$ zsh` every time we open a new terminal. If you are convinced that Oh-My-Zsh is your thing, we can make sure it is always available. On the terminal window, select **Edit > Profile Preferences** in the menu. In the new window, go to the tab **Title and Command**, select the field **Run a custom command instead of my shell** and type `zsh` in the **Custom command** field. Restart the terminal to see it in action.
+Oh-My-Zsh won't start by default. To activate it we have to type `$ zsh` every time we open a new terminal. If you are convinced that Oh-My-Zsh is your thing, you can make sure it is always available. On the terminal window, select **Edit > Profile Preferences** in the menu. In the new window, go to the tab **Title and Command**, select the field **Run a custom command instead of my shell** and type `zsh` in the **Custom command** field. Restart the terminal to see it in action.
 
 ![Console profile config](/images/posts/oh-my-zsh-profile-config.png)
 
-What I love about Oh-My-Zsh is its integration with Git, the smart auto-complete, and all the information it shows in a single prompt. the theme **bureau** shows:
+What I love about Oh-My-Zsh is its integration with Git, the smart auto-complete, and all the information it shows in a single prompt. The theme **bureau** shows:
 
-* my location, so I don't have to time `pwd` all the time
+* my location, so I don't have to type `pwd` all the time
 
 * the time, which is useful to know how long the last operation took by comparing the time of the subsequent prompt
 
