Rephrased a sentence to make it more sound.

--- a/_posts/2018/2018-02-28-oh-my-zsh.md
+++ b/_posts/2018/2018-02-28-oh-my-zsh.md
@@ -7,7 +7,7 @@ categories: zsh oh-my-zsh terminal shell git
 
 ![Vintage command console](/images/posts/oh-my-zsh-vintage.jpg)
 
-[Zsh] (Z shell) is a tool to enhance shell's capabilities. It's indispensable for those working in Unix-based systems. To make Zsh simpler, there is [Oh-My-Zsh], which is a framework for managing the Zsh configuration with the concept of themes. The goal of this post it to get you all set with Oh-My-Zsh on your Debian Linux system.
+[Zsh] (Z shell) defines itself as a "Shell with lots of features". Indeed, it's a tool to enhance shell's capabilities. Indispensable for those working in Unix-based systems. To make Zsh simpler, there is [Oh-My-Zsh], which is a framework for managing the Zsh configuration with the concept of themes. The goal of this post it to get you all set with Oh-My-Zsh on your Debian Linux system.
 
 <!-- more -->
 
