Fixed all broken links with the old IP address.

--- a/_posts/2010/2010-04-22-the-hug.md
+++ b/_posts/2010/2010-04-22-the-hug.md
@@ -20,4 +20,4 @@ I have no clue too either! I would say that it was a nice spirit from God who to
 <b>When we hug someone, both get two hearts on the chest</b>. So, sending a big and warming hug for you.”
 
 
-<div style="clear: both; text-align: center;"><a href="http://69.89.31.239/~hildeber/wp-content/uploads/2010/04/TigerHug.jpg" style="margin-left: 1em; margin-right: 1em;">![TigerHug-203x300.jpg](/images/posts/TigerHug-203x300.jpg)</a></div>
+![TigerHug-203x300.jpg](/images/posts/TigerHug-203x300.jpg)
