Replaced <b> by markdown syntax

--- a/_posts/2010/2010-04-22-the-hug.md
+++ b/_posts/2010/2010-04-22-the-hug.md
@@ -9,15 +9,15 @@ I was visiting the blog of a <a href="http://mrbraga.blogspot.com/">friend</a>, 
 
 According to him, in the country side of Brazil, a <a href="http://dictionary.reference.com/browse/redneck">redneck</a> was talking so calmly that he seemed to measure, analyze and meditate about every word he was saying…
 
-> “Yeah… of all men’s inventions, the one that makes sense the most is the <b>hug</b>. There is no way of not enjoying a hug! Everybody, during a hug, participates a little bit…
+> “Yeah… of all men’s inventions, the one that makes sense the most is the **hug**. There is no way of not enjoying a hug! Everybody, during a hug, participates a little bit…
 
 When you are missing someone, the hug of someone else relieves you. When you are angry and receive a hug, you even feel ashamed of that bad feeling. If you are happy and hugs someone else, this person will get a little bit of your happiness. If someone is ill and you hug her/him, she/he starts getting better and you get better as well.
 
 A lot of important and cult people have tried to understand why the hug is so ‘hightech’, but nobody has figured it out yet.
 
-I have no clue too either! I would say that it was a nice spirit from God who told me that and I’m going to tell you what he told me: <b>The hug is good because of the heart. When you hug someone you do a massage on your heart and the heart of the other one is massaged too</b>. But this isn’t all. The real key of the biggest secret is:
+I have no clue too either! I would say that it was a nice spirit from God who told me that and I’m going to tell you what he told me: **The hug is good because of the heart. When you hug someone you do a massage on your heart and the heart of the other one is massaged too**. But this isn’t all. The real key of the biggest secret is:
 
-<b>When we hug someone, both get two hearts on the chest</b>. So, sending a big and warming hug for you.”
+**When we hug someone, both get two hearts on the chest**. So, sending a big and warming hug for you.”
 
 
 ![TigerHug-203x300.jpg](/images/posts/TigerHug-203x300.jpg)
