Batch of link migration to markdown

--- a/_posts/2010/2010-04-22-the-hug.md
+++ b/_posts/2010/2010-04-22-the-hug.md
@@ -5,7 +5,7 @@ date: 2010-04-22 08:44:00 +0200
 categories: culture friendship literature
 ---
 
-I was visiting the blog of a [touching story](http://mrbraga.blogspot.com/">friend</a>, when I read a very <a href="http://mrbraga.blogspot.com/2010/04/do-abraco.html) that he was sharing in his last post. The story was originally published in a newspaper in my hometown. So, I decided to translate the story and publish it here because I believe it’s good to spread this kind of message.
+I was visiting the blog of a [friend](http://mrbraga.blogspot.com/), when I read a very [touching story](http://mrbraga.blogspot.com/2010/04/do-abraco.html) that he was sharing in his last post. The story was originally published in a newspaper in my hometown. So, I decided to translate the story and publish it here because I believe it’s good to spread this kind of message.
 
 According to him, in the country side of Brazil, a [redneck](http://dictionary.reference.com/browse/redneck) was talking so calmly that he seemed to measure, analyze and meditate about every word he was saying…
 
