--- a/_posts/2018/2018-02-28-oh-my-zsh.md
+++ b/_posts/2018/2018-02-28-oh-my-zsh.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Installing Oh-My-Zsh on Debian-Based Systems"
 date: 2018-02-28 12:00:00 +0200
+image: /images/posts/oh-my-zsh-vintage.jpg
 categories: zsh oh-my-zsh terminal shell git
 ---
 
